--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
   "name": "@cyia/localize",
-  "version": "1.1.8",
-  "description": "",
+  "version": "0.0.0",
+  "description": "Angular 本地化独立版本;Angular localize standalone version",
   "main": "./lib/index.js",
   "scripts": {
     "sync:localize": "code-recycle ./script/sync-localize.ts --cwd ./src ",
     "test": "rimraf ./test/fixture-output && node --import tsx --inspect ./node_modules/.bin/mocha  \"test/**/*.ts\"",
-    "build": "rimraf ./lib && tsc -p ./tsconfig.build.json",
-    "release-publish": "npm run build && npm --registry=http://192.168.31.88:5555 publish"
+    "build": "rimraf ./dist && tsx ./script/build.cli.ts && tsc -p ./tsconfig.build-import.json && tsx ./script/build.import.ts && cpx ./*.md ./dist && cpx ./src/package.json ./dist",
+    "release-publish": "npm run build && npm --registry=http://192.168.31.88:5555 publish ./dist"
   },
   "bin": {
     "i18n": "./lib/bin/index.js",
     "l10n": "./lib/bin/index.js"
   },
   "author": "",
-  "license": "ISC",
+  "private": true,
   "devDependencies": {
     "@types/chai": "^4.3.14",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.30",
     "chai": "5.1.0",
+    "cpx": "^1.5.0",
+    "esbuild": "^0.20.2",
     "mocha": "^10.3.0",
     "rimraf": "^5.0.5",
     "tsx": "^4.7.1"
   },
   "dependencies": {
-    "@code-recycle/cli": "1.3.9",
+    "@code-recycle/cli": "1.3.10",
     "commander": "12.0.0",
     "yaml": "2.4.1"
   }
