--- a/src/package.json
+++ b/src/package.json
@@ -31,5 +31,9 @@
     "commander": "12.0.0",
     "yaml": "2.4.1"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  }
 }
