--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,17 @@
 {
   "name": "@cyia/localize",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Angular 本地化独立版本;Angular localize standalone version",
+  "keywords": [
+    "i18n",
+    "l10n",
+    "internationalization",
+    "localize",
+    "translate",
+    "angular",
+    "localization",
+    "language"
+  ],
   "bin": {
     "i18n": "./bin/index.js",
     "l10n": "./bin/index.js"
